--- a/content/tournaments/20200725-brno.md
+++ b/content/tournaments/20200725-brno.md
@@ -8,7 +8,7 @@ description: |
   Hand deck in the 15-player tournament with a 0GW 3VP record, which somehow
   miraculously placed me in fifth place to the finals, which I unfortunately was
   not able to play.
-image: enkidu.jpg
+image: blackhand.jpg
 categories:
   - "tournaments"
 ---
