Deck: Wagner's Wet Dream

--- a/content/tournaments/20200725-brno.md
+++ b/content/tournaments/20200725-brno.md
@@ -1,5 +1,5 @@
 ---
-title: "Summer Tournament in Brno"
+title: "Summer 2020 Tournament in Brno"
 date: 2020-10-14T00:57:37+02:00
 draft: false
 description: |
@@ -8,7 +8,7 @@ description: |
   Hand deck in the 15-player tournament with a 0GW 3VP record, which somehow
   miraculously placed me in fifth place to the finals, which I unfortunately was
   not able to play.
-image: blackhand.jpg
+image: elimelech.png
 categories:
   - "tournaments"
 ---
