--- a/content/tournaments/20220702-gp-malmo.md
+++ b/content/tournaments/20220702-gp-malmo.md
@@ -15,7 +15,44 @@ categories:
 
 ## Game 1: 0VP
 
-X →️ X →️ X →️ X →️ X
+Presence Weenies **4VP GW** →️ Toreador Starter →️ Malkavian Starter **1VP** →️ Ventrue Stickmen →️ me
+
+My predator was very fast with `Lodin` up via `Dreams of the Sphinx`. I had
+`Nonu Dis` as a first guy, but my hand was very awkward: some masters I had to
+play before I could get blood from Noni. I mostly drew stealth cards, with just
+a single `Platinum Protocol` and `CrimethInc.`, which I hoped would get things
+going. My prey played a `Mind Numb` on me before I had a chance to bleed, which
+slowed me down. My predator bled me for six as his first action, which I could not
+block. This meant that I could only bring out two vampires instead of three.
+
+I realized I would need a Baron if I was supposed to survive because I was
+also likely to receive bounced Malkavian bleeds by Malkavian. I had no Barons in
+my uncontrolled region, so I tried to play as many cards as possible to
+cycle to some `Fee Stakes`. It started to show that my crosstable allies are very green
+("playing with checklists" green), which did not really help the balance on the
+table. Toreador was under weenie pressure. Malkavian bled forward, but she got
+blocked and hit by Stickmen often.
+
+Toreador was down to two pool, so the Ventrue tried to keep him alive and passed
+a `Parity Shift` moving three pool from my prey to the Toreador. I was also
+getting bled but not by full force; I am unsure whether my predator just wanted
+me to do more damage forward, or he did not have the cards. He pulled out a fourth
+vampire as the only unlocked one. I still tried to go forward; my prey was at eight,
+so in theory, I could oust him with enough cards (with `Club Illusion`, I had a
+bleed for five on the board), but I only had stealth and bounces, and I only drew
+politics and more stealth. My prey ousted the Toreador in his turn but, more
+importantly, `Mind Numbed` the only unlocked Ventrue, who also received one
+redirected bleed. Turns out that he did not have any wakes or unlocks, so he dies
+with three `Deflections` in his hand. So I got one more turn, but now my prey had
+more pool. I drew more cards I could not play, so I could not kill him.
+He then swept the Malkavian, and I just conceded.
+
+Having slept for only three or four hours two nights before, I was sleep deprived,
+and I made a million stupid mistakes in this game: I kept forgetting to discard,
+I forgot that `Nonu Dis` has +1 bleed, and I even forgot to use his special. I
+had to compensate by trying to focus hard in the remaining games. The rest of the
+day was better, but I think I could have done better if I had focused better
+in the first game.
 
 ## Game 2: 0VP
 
