--- a/content/tournaments/20220702-gp-malmo.md
+++ b/content/tournaments/20220702-gp-malmo.md
@@ -56,7 +56,24 @@ in the first game.
 
 ## Game 2: 0VP
 
-X →️ X →️ X →️ X →️ X
+me →️ Ventrue Starter →️ Anson Guns Rush →️ !Tremere →️ Stanislava
+
+I was first, and without a Baron in my uncontrolled region, I went for a nice
+`Jenny Silver` into `Nonu Dis` start. Anson had a pretty fast, explosive start.
+Unfortunately, also my predator accelerated the game, leading with two `Zillah’s
+Valleys` in the first two turns and bringing out `Hartmut Stover` and `Genevieve`.
+He attempted to `Govern the Unaligned` at superior with Hartmut, which I would
+love to see. Still, I pointed out that he cannot do that (Hartmut only has
+inferior dominate), so I took a big bleed instead.
+
+I managed to get some bleeds through, but I was stuck with just two minions,
+and I heavily missed multi-act, seeing no `Dabblers` or `CrimethInc.`. Prey did
+not block me to make me choke on stealth cards, but I was, in fact, stuck with
+*action* cards on my hand (like four `The Platinum Protocol`, etc.). Anson and
+Stanislava started cooperating, and my predator then had an easy game because
+Anson thrashed my grandpredator's minions. The Tremere combat is no match for
+Anson with guns. As a result, I started taking heavy bleeds and political hits
+and died rather quickly.
 
 ## Game 3: 0VP
 
