Tournament: GP Malmo 2022

--- a/content/tournaments/20220702-gp-malmo.md
+++ b/content/tournaments/20220702-gp-malmo.md
@@ -2,74 +2,115 @@
 title: "Grand Prix: Malmö"
 date: 2022-07-02T00:00:00+02:00
 draft: true
-description: |
-   TBD
+description: | 
+  Last of the Grand Prix tournaments I attended in 2022 before the European
+  Championship in Helsinki, the tournament in Malmö was an efficient trip for
+  me. I played Dabblesnakes, my V5 Ministry multi-act build to a disappointing
+  result of 0GW 0VP, after a combination of poor play and some insanely poor
+  luck.
 image: malmo.jpg
 categories:
 - "tournaments"
+
 ---
+The last Grand Prix in the Covid-prolonged 2019-2022 season was held in Malmö,
+Sweden. I had never been to Malmö before, but the trip there was effortless.
+There is a fast and comfortable train going to Malmö right from Copenhagen
+airport, and CPH is an enjoyable airport to travel from Prague and Vienna. The
+train ride from Denmark to Sweden goes via
+the [Øresund bridge](https://en.wikipedia.org/wiki/%C3%98resund_Bridge). The
+bridge is stunning; during the ride, I wondered how long it would take to build
+something like that in Czechia. I probably do not want to know the answer.
+
+The tournament was held in a convention center in a shopping mall/arena compound
+that had its own train station on the route from the airport. I was accommodated
+in a hotel in the same area, so the entire trip was pleasantly short: it took me
+three hours to get to Prague, one more hour to get to its airport, a little over
+one hour on the actual flight, and then around 20 minutes to my hotel in Sweden.
+The convention center was across the street from the hotel, and across another
+street was a shopping center with a large food court, allowing me to stay in the
+immediate area the whole weekend. I have not therefore seen anything from Malmö
+proper, which is a bit sad. All-in-all, this trip was the most “efficient” of
+all my tournament trips this summer: I went there on Friday, spent Saturday
+playing the game, and got back early Sunday. I guess I will need to see Malmö
+itself next time.
+
+The tournament was a part of the [Malmö Game Week](https://malmogameweek.com/),
+so there was plenty to do in the venue between rounds: I paid some attention to
+the coverage of the Magic modern tournament and checked out some vendors. The
+venue was a convention center, but the VtES tournament was held in a smaller
+“niche”, stylishly decorated by the organizers. The light and noise from the
+main venue were dampened by some soft movable walls, there was a carpet, the
+tables had dark tablecloths, and there were some candlesticks with candles.
+Pretty cool and stylish.
 
 # Deck: Dabblesnakes
+
+Even after the disappointing result on [Grand Prix: Aix-en-Provence]({{< ref "/tournaments/20220617-aix-en-provence" >}} "Grand Prix tournament in Aix-en-Provence"),
+I gave my build of V5 Ministry called [Dabblesnakes]({{< ref "/decks/20220624-dabblesnakes" >}} "Dabblesnakes")
+another shot because I enjoyed playing the deck. I played an identical version
+like earlier in France.
 
 # Games
 
 ## Game 1: 0VP
 
-Presence Weenies **4VP GW** →️ Toreador Starter →️ Malkavian Starter **1VP** →️ Ventrue Stickmen →️ me
+Presence Weenies **4VP GW** →️ Toreador Starter →️ Malkavian Starter **1VP** →️
+Ventrue Stickmen →️ me
 
-My predator was very fast with `Lodin` up via `Dreams of the Sphinx`. I had
-`Nonu Dis` as a first guy, but my hand was very awkward: some masters I had to
-play before I could get blood from Noni. I mostly drew stealth cards, with just
-a single `Platinum Protocol` and `CrimethInc.`, which I hoped would get things
-going. My prey played a `Mind Numb` on me before I had a chance to bleed, which
-slowed me down. My predator bled me for six as his first action, which I could not
-block. This meant that I could only bring out two vampires instead of three.
+My predator was very fast with `Lodin` up via `Dreams of the Sphinx`. I
+had `Nonu Dis` as a first guy, but my hand was very awkward: some masters I had
+to play before I could get blood from Noni. I drew stealth cards, with just a
+single `Platinum Protocol` and `CrimethInc.`, which I hoped would get things
+going. My prey played a `Mind Numb` on me before I could bleed, which slowed me
+down. My predator bled me for six as his first action, which I could not block.
+This meant that I could only bring out two vampires instead of three.
 
-I realized I would need a Baron if I was supposed to survive because I was
-also likely to receive bounced Malkavian bleeds by Malkavian. I had no Barons in
-my uncontrolled region, so I tried to play as many cards as possible to
-cycle to some `Fee Stakes`. It started to show that my crosstable allies are very green
-("playing with checklists" green), which did not really help the balance on the
-table. Toreador was under weenie pressure. Malkavian bled forward, but she got
-blocked and hit by Stickmen often.
+I realized I would need a Baron if I was supposed to survive because I was also
+likely to receive bounced Malkavian bleeds by Malkavian. I had no Barons in my
+uncontrolled region, so I tried to play as many cards as possible to cycle to
+some `Fee Stakes`. It started to show that my cross-table allies were very
+green ("playing with checklists" green), which did not really help the balance
+on the table. Toreador was under weenie pressure. Malkavian bled forward, but
+she got blocked and hit by Stickmen often.
 
 Toreador was down to two pool, so the Ventrue tried to keep him alive and passed
 a `Parity Shift` moving three pool from my prey to the Toreador. I was also
-getting bled but not by full force; I am unsure whether my predator just wanted
-me to do more damage forward, or he did not have the cards. He pulled out a fourth
-vampire as the only unlocked one. I still tried to go forward; my prey was at eight,
-so in theory, I could oust him with enough cards (with `Club Illusion`, I had a
-bleed for five on the board), but I only had stealth and bounces, and I only drew
-politics and more stealth. My prey ousted the Toreador in his turn but, more
-importantly, `Mind Numbed` the only unlocked Ventrue, who also received one
-redirected bleed. Turns out that he did not have any wakes or unlocks, so he dies
-with three `Deflections` in his hand. So I got one more turn, but now my prey had
-more pool. I drew more cards I could not play, so I could not kill him.
-He then swept the Malkavian, and I just conceded.
+getting bled but not by full force; I am unsure whether my predator wanted me to
+do more damage forward or he did not have the cards. He pulled out a fourth
+vampire as the only unlocked one. I still tried to go forward; my prey was at
+eight, so in theory, I could oust him with enough cards (with `Club Illusion`, I
+had a bleed for five on the board), but I only had stealth and bounces, and I
+only drew politics and more stealth. My prey ousted the Toreador in his turn
+but, more importantly, `Mind Numbed` the only unlocked Ventrue, who also
+received one redirected bleed. Turns out that he did not have any wakes or
+unlocks, so he dies with three `Deflections` in his hand. So I got one more
+turn, but now my prey had more pool. I drew more cards I could not play, so I
+could not kill him. He then swept the Malkavian, and I just conceded.
 
-Having slept for only three or four hours two nights before, I was sleep deprived,
-and I made a million stupid mistakes in this game: I kept forgetting to discard,
-I forgot that `Nonu Dis` has +1 bleed, and I even forgot to use his special. I
-had to compensate by trying to focus hard in the remaining games. The rest of the
-day was better, but I think I could have done better if I had focused better
+Having slept for only three or four hours two nights before, I was sleep
+deprived, and I made a million stupid mistakes in this game: I kept forgetting
+to discard, I forgot that `Nonu Dis` has +1 bleed, and I even forgot to use his
+special. I had to compensate by trying to focus hard in the remaining games. The
+rest of the day was better, but I could have done better if I had focused better
 in the first game.
 
 ## Game 2: 0VP
 
 me →️ Ventrue Starter →️ Anson Guns Rush →️ !Tremere →️ Stanislava
 
-I was first, and without a Baron in my uncontrolled region, I went for a nice
-`Jenny Silver` into `Nonu Dis` start. Anson had a pretty fast, explosive start.
-Unfortunately, also my predator accelerated the game, leading with two `Zillah’s
-Valleys` in the first two turns and bringing out `Hartmut Stover` and `Genevieve`.
-He attempted to `Govern the Unaligned` at superior with Hartmut, which I would
-love to see. Still, I pointed out that he cannot do that (Hartmut only has
-inferior dominate), so I took a big bleed instead.
+I was first, and without a Baron in my uncontrolled region, I went for a
+nice `Jenny Silver` into `Nonu Dis` start. Anson had a pretty fast, explosive
+start. Unfortunately, also my predator accelerated the game, leading with
+two `Zillah’s Valleys` in the first two turns and bringing out `Hartmut Stover`
+and `Genevieve`. He attempted to `Govern the Unaligned` at superior with
+Hartmut, which I would love to see. Still, I pointed out that he cannot do
+that (Hartmut only has inferior dominate), so I took a big bleed instead.
 
-I managed to get some bleeds through, but I was stuck with just two minions,
-and I heavily missed multi-act, seeing no `Dabblers` or `CrimethInc.`. Prey did
-not block me to make me choke on stealth cards, but I was, in fact, stuck with
-*action* cards on my hand (like four `The Platinum Protocol`, etc.). Anson and
+I managed to get some bleeds through, but I was stuck with just two minions, and
+I heavily missed multi-act, seeing no `Dabblers` or `CrimethInc.`. Prey did not
+block me to make me choke on stealth cards, but I was, in fact, stuck with *
+action* cards on my hand (like four `The Platinum Protocol`, etc.). Anson and
 Stanislava started cooperating, and my predator then had an easy game because
 Anson thrashed my grandpredator's minions. The Tremere combat is no match for
 Anson with guns. As a result, I started taking heavy bleeds and political hits
@@ -77,6 +118,28 @@ and died rather quickly.
 
 ## Game 3: 0VP
 
-X →️ X →️ X →️ X →️ X
+Tero Aalto (Unnamed) →️ Do Not Remember →️ Weenie Politics →️ me →️ Nikica (
+Unnamed)
+
+What should have been a game started with a fairly easy early oust turned into a
+VtES nightmare and my deck completely broke down. Both my prey and my grandprey
+were playing an Unnamed deck, so neither of them had a functioning vampire for
+quite a long time. My predator was a weenie-ish political deck that spent their
+early games doing various political actions with `Cryptic Rider` and bred votes
+with `Praxis Seizures`. Under normal circumstances, this should have been an
+excellent game for me, but my deck decided to not cooperate. I have not seen a
+single `Platinum Protocol` nor any other bleed card. I only drew masters and the
+“second action” cards, and I spent my turns mostly doing bleeds for one. This
+was not enough, and I was ousted first by the political predator, who, for some
+reason, also had very little pressure (I do not remember what his predator was
+playing).
 
 # Overall
+
+I’m pretty disappointed about this tournament. The combination of poor play (
+especially in the first game) with the deck malfunction in the third one led to
+an abysmal result, tough to swallow. I am still convinced the deck has merits,
+but it probably needs to be tuned for consistency. It definitely needs to run
+more `Dabblers`; I think three is the minimum for the 75-card deck, but I will
+probably try four. One more `Dreams of the Sphinx` to increase consistency.
+Prey’s `Villeins` are also problematic, so several `Wash` copies could help.
