Tournament: GP Malmo 2022: publish

--- a/content/tournaments/20220702-gp-malmo.md
+++ b/content/tournaments/20220702-gp-malmo.md
@@ -1,7 +1,7 @@
 ---
 title: "Grand Prix: Malmö"
 date: 2022-07-02T00:00:00+02:00
-draft: true
+draft: false
 description: | 
   Last of the Grand Prix tournaments I attended in 2022 before the European
   Championship in Helsinki, the tournament in Malmö was an efficient trip for
